--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,13 +36,16 @@
         </activity>
 
         <activity android:name=".PickLocationActivity" />
-
-        <activity android:name=".CreateRouteActivity" >
+        <activity android:name=".MyRoutesActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".CreateRouteActivity" >
+
         </activity>
     </application>
 
